docs(aios): 更新文档配置和内容
- 修改 app.config.ts 中的站点名称和 logo
- 更新 Introduction.md 中的插件介绍信息
- 删除 Installation.md、Markdown.md

--- a/content/1.getting-started/1.Introduction.md
+++ b/content/1.getting-started/1.Introduction.md
@@ -1,30 +1,26 @@
 ---
-title: Introduction
-description: shadcn-docs-nuxt is a Nuxt documentation template built with Nuxt Content and shadcn-vue.
-icon: 'lucide:info'
+title: 简介
+description: 博闻智星 插件是一种扩展功能，可以通过在 博闻智星 中安装和使用来增强聊天体验.
+icon: "lucide:info"
 ---
 
-## Motivations
+## 什么是 博闻智星 插件？
 
-**shadcn-docs-nuxt** is created as a free alternative documentation solution to [Docus](https://docus.dev/) and [Nuxt UI Pro Docs](https://docs-template.nuxt.dev/).
+**博闻智星** 插件是一种扩展功能，可以通过在 LobeChat 中安装和使用来增强聊天体验。插件可以提供各种功能，包括但不限于以下几个方面：
 
-## Features
+- 消息处理：插件可以监听和处理从 LobeChat 发送过来的消息。通过使用插件，用户可以在聊天中使用自定义的命令或触发词来执行特定的操作，例如发送消息、查询数据、调用 API 等。
+- 界面增强：插件可以提供自定义的界面元素，用于展示更丰富的信息或提供交互功能。这些界面元素可以嵌入到聊天窗口中，使用户可以直接在聊天界面中完成某些操作，而无需切换到其他应用程序或网页。
+- 数据处理：插件可以处理和转换从 LobeChat 接收到的数据，以满足特定的业务需求。例如，插件可以将接收到的数据进行格式化、过滤、排序等操作，然后将处理后的数据展示给用户或发送给其他系统。
+- 集成第三方服务：插件可以与第三方服务进行集成，以实现更复杂的功能。例如，插件可以与邮件服务集成，使用户可以通过聊天发送电子邮件；或者与日历服务集成，使用户可以在聊天中创建和管理日程安排。
 
-- Free and [open source](https://github.com/ZTL-UwU/shadcn-docs-nuxt).
-- Fully [customizable](/api/configuration).
-- Rich [components](/getting-started/writing/components) to work with.
-- Mobile support.
-- Indexed searching powered by Nuxt Content.
-- Partial component compatibility with `Docus`, `Nuxt UI Pro Docs`, `undocs`.
+通过安装和使用插件，用户可以根据自己的需求自定义和扩展 LobeChat 的功能，使其更加适用于不同的场景和工作流程。
 
-## Credits
+## 插件的构成
 
-- [Nuxt Content](https://content.nuxt.com/): Content made easy for Vue Developers.
-- [shadcn-ui](https://ui.shadcn.com/): For the beautiful component & docs design.
-- [shadcn-vue](https://www.shadcn-vue.com/): For the vue port of shadcn-ui & some docs component source.
-- [Docus](https://docus.dev/): For inspiration & some docs component source.
-- [Nuxt UI Pro Docs](https://docs-template.nuxt.dev/): For inspiration.
+一个的插件由以下几个部分组成：
 
-## License
-
-[MIT](https://github.com/ZTL-UwU/shadcn-docs-nuxt/blob/main/LICENSE)
+1. **插件索引**：用于展示插件的基本信息，包括插件名称、描述、作者、版本、插件描述清单的链接。
+2. **插件描述清单 (manifest)**：用于描述插件的功能实现，包含了插件的服务端描述、前端展示信息、版本号等。关于 manifest 的详细介绍，[请参考这里](/getting-started/writing/manifest)。
+3. **插件服务**：用于实现插件描述清单中所描述的服务端和前端模块，分别如下：
+   - **服务端**：需要实现 manifest 中描述的 api 部分的接口能力；。
+   - **前端UI(可选)**：需要实现 manifest 中描述的 ui 部分的界面，该界面将会在插件消息中透出，进而实现比文本更加丰富地信息展示方式[详情请参考](/getting-started/writing/ui)。
