--- a/content/1.getting-started/1.Introduction.md
+++ b/content/1.getting-started/1.Introduction.md
@@ -20,7 +20,7 @@ icon: "lucide:info"
 一个的插件由以下几个部分组成：
 
 1. **插件索引**：用于展示插件的基本信息，包括插件名称、描述、作者、版本、插件描述清单的链接。
-2. **插件描述清单 (manifest)**：用于描述插件的功能实现，包含了插件的服务端描述、前端展示信息、版本号等。关于 manifest 的详细介绍，[请参考这里](/getting-started/writing/manifest)。
+2. **插件描述清单 (manifest)**：用于描述插件的功能实现，包含了插件的服务端描述、前端展示信息、版本号等。关于 manifest 的详细介绍，[请参考这里](/)。
 3. **插件服务**：用于实现插件描述清单中所描述的服务端和前端模块，分别如下：
    - **服务端**：需要实现 manifest 中描述的 api 部分的接口能力；。
-   - **前端UI(可选)**：需要实现 manifest 中描述的 ui 部分的界面，该界面将会在插件消息中透出，进而实现比文本更加丰富地信息展示方式[详情请参考](/getting-started/writing/ui)。
+   - **前端UI(可选)**：需要实现 manifest 中描述的 ui 部分的界面，该界面将会在插件消息中透出，进而实现比文本更加丰富地信息展示方式[详情请参考](/)。
